# no-noncense

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: stream.rs
src/: aes_gcm_se3_hmac.rs  aes_gcm_se3_xor.rs  lib.rs
