[package]
name = "no-noncense"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = {version = "0.5.2", features = ["stream"]}
aes = "0.8.2"
aes-gcm = "0.10.1"
cipher = "0.4.4"
hmac = "0.12.1"
sha2 = "0.10.6"

[features]
default = []
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]

[dev-dependencies]
criterion = "0.4"
getrandom = "0.2"

[[bench]]
name = "stream"
harness = false
